[package]

description = "Context-generic client components for communicating with a Sovereign rollup node"
name        = "hermes-sovereign-chain-components"
readme      = "README.md"

authors      = { workspace = true }
edition      = { workspace = true }
keywords     = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
rust-version = { workspace = true }
version      = { workspace = true }

[dependencies]
cgp-core                            = { workspace = true }
cgp-error-eyre                      = { workspace = true }
hermes-cosmos-chain-components      = { workspace = true }
hermes-encoding-components          = { workspace = true }
hermes-protobuf-encoding-components = { workspace = true }
hermes-relayer-components           = { workspace = true }
hermes-runtime                      = { workspace = true }
hermes-runtime-components           = { workspace = true }
hermes-sovereign-rollup-components  = { workspace = true }
hermes-wasm-client-components       = { workspace = true }

ibc                 = { workspace = true }
ibc-proto           = { workspace = true }
ibc-query           = { workspace = true }
ibc-relayer         = { workspace = true }
ibc-relayer-types   = { workspace = true }
sov-celestia-client = { workspace = true, features = ["test-util"] }

base64          = { version = "0.22.1" }
bech32          = { workspace = true }
borsh           = { workspace = true }
ed25519-dalek   = { version = "2.1.1" }
eyre            = { workspace = true }
hex             = { version = "0.4.3" }
jsonrpsee       = { workspace = true, features = ["http-client"] }
prost           = { workspace = true }
serde           = { workspace = true }
serde-json-wasm = { version = "1.0.1" }
serde_json      = { workspace = true }
sha2            = { workspace = true }
tokio           = { workspace = true }
tonic           = { workspace = true }
