[package]

description = "Concrete integration test cases for testing Sovereign to Cosmos relaying"
name        = "hermes-sovereign-integration-tests"
readme      = "README.md"

authors      = { workspace = true }
edition      = { workspace = true }
keywords     = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
rust-version = { workspace = true }
version      = { workspace = true }

[dependencies]
cgp-core                           = { workspace = true }
hermes-celestia-integration-tests  = { workspace = true }
hermes-celestia-test-components    = { workspace = true }
hermes-cosmos-chain-components     = { workspace = true }
hermes-cosmos-integration-tests    = { workspace = true }
hermes-cosmos-relayer              = { workspace = true }
hermes-cosmos-test-components      = { workspace = true }
hermes-cosmos-wasm-relayer         = { workspace = true }
hermes-relayer-components          = { workspace = true }
hermes-runtime                     = { workspace = true }
hermes-runtime-components          = { workspace = true }
hermes-sovereign-chain-components  = { workspace = true }
hermes-sovereign-relayer           = { workspace = true }
hermes-sovereign-rollup-components = { workspace = true }
hermes-sovereign-test-components   = { workspace = true }
hermes-test-components             = { workspace = true }
hermes-wasm-client-components      = { workspace = true }
hermes-wasm-test-components        = { workspace = true }

ibc               = { workspace = true }
ibc-proto         = { workspace = true }
ibc-relayer       = { workspace = true }
ibc-relayer-types = { workspace = true }

sov-celestia-client = { workspace = true, features = ["test-util"] }

borsh              = { workspace = true }
eyre               = { workspace = true }
futures            = { workspace = true }
hex                = { workspace = true }
jsonrpsee          = { workspace = true, features = ["http-client", "ws-client"] }
rand               = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
sha2               = { workspace = true }
tokio              = { workspace = true }
toml               = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
