[package]

description = "Dependencies for running Sovereign integration tests"
name        = "hermes-sovereign-test-components"
readme      = "README.md"

authors      = { workspace = true }
edition      = { workspace = true }
keywords     = { workspace = true }
license      = { workspace = true }
repository   = { workspace = true }
rust-version = { workspace = true }
version      = { workspace = true }

[dependencies]
cgp-core                           = { workspace = true }
hermes-celestia-test-components    = { workspace = true }
hermes-cosmos-test-components      = { workspace = true }
hermes-relayer-components          = { workspace = true }
hermes-runtime                     = { workspace = true }
hermes-runtime-components          = { workspace = true }
hermes-sovereign-chain-components  = { workspace = true }
hermes-sovereign-rollup-components = { workspace = true }
hermes-test-components             = { workspace = true }

ibc               = { workspace = true }
ibc-relayer       = { workspace = true }
ibc-relayer-types = { workspace = true }

bech32        = { workspace = true }
ed25519-dalek = { workspace = true }
hex           = { workspace = true }
jsonrpsee     = { workspace = true, features = ["http-client"] }
rand          = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
sha2          = { workspace = true }
toml          = { workspace = true }
